# dso

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  angle_comparison.txt  camera.txt  octave-workspace  time.txt  timestampesave.m
Matlab_evaluation/: EvalBenchmark.m  Plot.m  PlotCumulativeError.m  PlotErrorBar.m  PlotNoDifficult.m  angle_comparison.txt  duplicateRightSequence.m  getTrajectoryError.m  notes.txt  runEvaluation.m  runEvaluation.m~  runEvaluationRight.m
Matlab_evaluation/VINS/: findPIDS.m  runEvaluation.m  run_evaluation.py
bak/MsgSync/: MsgSynchronizer.cpp
config/: euroc.yaml  euroc.yaml~  euroc_right.yaml
launch/: ueye_imu.launch
scripts/: bar_graph_with_error.py  error_with_min_max.json  visualize_imu_photo_error.py  visualize_imu_photo_error.py~
src/: main_dso_bag.cpp  main_dso_imu.cpp  main_dso_pangolin.cpp  main_groundtruth_parser.cpp
src/DatasetIterator/: DatasetIterator.cpp  DatasetIterator.h  ImuIterator.cpp  ImuIterator.h
src/FullSystem/: CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  Residuals.cpp  Residuals.h
src/GroundTruthIterator/: GroundTruthIterator.cpp  GroundTruthIterator.h
src/IMU/: Preintegrator.cpp  Preintegrator.h  configparam.cpp  configparam.h  imudata.cpp  imudata.h
src/IMU/MsgSync/: MsgSynchronizer.h
src/IOWrapper/: Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedTopHessian.cpp  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.h
src/gtsam_factors/: PhotometricFactor.cpp  PhotometricFactor.h
src/tests/: bias_optimization.cpp  coord_transformation.cpp  dataset_iterator.cpp  imu_errors.cpp  matrix_assignments.cpp  two_pose_vision_optimize.cpp
src/util/: DatasetReader.h  FrameShell.cpp  FrameShell.h  NumType.h  Undistort.h  settings.cpp  settings.h
